--- a/style.css
+++ b/style.css
@@ -1,59 +1,83 @@
-*{
-  padding: 0; margin: 0;
-}
+h2{text-align:center}
+h4{text-align:center; color: #A39050;}
+td{text-align: center;}
+button{
 
+	text-decoration: none;
+	position: relative;
+	font-size: 20px;
+	line-height: 20px;
+	padding: 12px 30 px;
+	color: #fff;
+	font-weight: 700;
+	text-transform: uppercase;
+	background: green;
+	cursor: pointer;
+	border: 2 px solid #BFE2FF;
+	transition: transform 0.2s ease-out;
+	padding: 0.2s ease-out;
+	overflow: hidden;
+}
+button:hover,
+button:active{
+	color: #fff;
+	transform: rotate(-2deg);
+	padding: 12px 50px 12px 10px;
+}
+button:before{
+	content: '\27A4';
+	position: absolute;
+	right: -30px;
+	color: yellowgreen;
+	transition: right 0.5s cubic-bezier(.97, .01, .97, .55);
+}
+button:hover::before
+button:active::before{
+	right: 10px;
+}
+button{
+	position: relative;
+	display: inline-block;
+	width: 10em;
+	height: 2.5em;
+	text-align: center;
+	text-decoration: none;
+	text-shadow: 0 -1px 1px #777;
+	color: #fff;
+	outline: none;
+	border: 2px solid #F64C2B;
+	border-radius: 5px;
+	box-shadow: 0 0 0 60px rgba(0, 0, 0, 0) inset, .1em .1em .2em #800;
+	background: linear-gradient(#FB9575, #F45A38 48%, #EA1502 52%, #F02F17);
+}
+button:hover{
+	background: linear-gradient(#DB5931, #F45A38 48%, #EA1502 52%, #F06A58);
+}
+button:active{
+	top:1px;
+	left: 1px;
+	box-shadow: 0 0 0 60px rgba(0, 0, 0, 0);
+}
+button{
+	font-size: 20px;
+	padding: 12px 30px;
+	color: #fff;
+	font-weight: 700;
+	text-transform: uppercase;
+	background: #337AB7;
+	cursor: pointer;
+	border: 2px solid #BFE2FF;
+	outline: 1px solid;
+	outline-color: #337AB7;
+	transition: all 1.5s cubic-beziar(0.19, 1, 0.22, 1);
 
-h1 {
-  color: #A39050; text-decoration: none; font-size: 50px; text-align: center;
 }
-h1:hover{color: #24231D}
-button{font-size: 25px}
-h2 {
-  text-align: center;
-  font-size: 25px;
-  margin: 25px 0;
-}
-
-  /* Свойства фотографии*/
-.photo {
-  border-radius: 15px;
-  /* Радиус скругления */
-  border: 3px solid transparent;
-  /* Параметры рамки */
-  box-shadow: 0 4px 15px 0px rgba(0, 0, 0, 0.52);
-  object-fit: cover;
-  text-align: center;
-}
-
-  /* Эффект наведения на картинку */
-.photo:hover {
-  border: 3px solid #FFD700;
-}
-
-  /* Свойства ссылок */
-a {
-  display: block;
-  text-decoration:none;
-  margin-bottom: 35px;
-  position: relative;
-}
-
-  /* Что делать при наведении на ссылку */
-a:hover {
-  color:darkred;
-}
-
-  /* Этим свойством добавляем подчеркивание через создание псевдокласса */
-a::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  transform: translateY(1.5em);
-  border-bottom: 1px solid #dadada;
-  width: 300px;
-}
-
-.contacts {
-  text-align: center; font-size: 35;
-}
+ button:hover{
+ 	box-shadow: inset 0 0 20px #BFE2FF;
+ 	outline-color: rgba(255, 255, 255, 0);
+ 	outline-offset: 15px;
+ 	color: #fff;
+ }
+ button:active{
+ 	transform: translateY(2px);
+ }
